--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,202 @@
-appnope==0.1.3
+anyio==3.5.0
+appnope==0.1.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.2
+asgiref==3.5.0
+astor==0.8.1
 asttokens==2.0.5
+async-generator==1.10
+attrs==21.4.0
+autograd==1.4
+autograd-gamma==0.5.0
 backcall==0.2.0
+backports.zoneinfo==0.2.1
+beautifulsoup4==4.10.0
+binaryornot==0.4.4
+bleach==4.1.0
+blis==0.7.7
+catalogue==2.0.7
+certifi==2021.10.8
+cffi==1.15.0
+chardet==4.0.0
+charset-normalizer==2.0.12
+chart-studio==1.1.0
+click==8.1.2
+colorlover==0.3.0
+cookiecutter==1.7.3
+cramjam==2.5.0
+cryptography==36.0.2
+cufflinks==0.17.3
 cycler==0.11.0
+cymem==2.0.6
 debugpy==1.6.0
 decorator==5.1.1
+defusedxml==0.7.1
+Deprecated==1.2.13
+Django==4.0.4
+dnspython==2.2.1
+email-validator==1.1.3
+english==2020.7.0
 entrypoints==0.4
+et-xmlfile==1.1.0
+eval==0.0.5
+evalml==0.52.0
 executing==0.8.3
-fonttools==4.33.3
-ipykernel==6.13.0
-ipython==8.4.0
+fastapi==0.75.1
+fastparquet==0.8.0
+Flask==2.1.2
+fonttools==4.31.2
+formulaic==0.3.4
+fsspec==2022.2.0
+future==0.18.2
+h11==0.13.0
+HeapDict==1.0.1
+html5lib==1.1
+idna==3.3
+imbalanced-learn==0.9.1
+imblearn==0.0
+importlib-metadata==4.11.3
+importlib-resources==5.6.0
+interface-meta==1.3.0
+ipykernel==6.9.2
+ipython==8.1.1
+ipython-genutils==0.2.0
+ipywidgets==7.7.0
+itsdangerous==2.1.2
 jedi==0.18.1
+Jinja2==3.1.1
+jinja2-time==0.2.0
 joblib==1.1.0
-jupyter-client==7.3.1
-jupyter-core==4.10.0
-kiwisolver==1.4.2
-matplotlib==3.5.2
+jsonschema==4.4.0
+jupyter-client==7.1.2
+jupyter-contrib-core==0.3.3
+jupyter-contrib-nbextensions==0.5.1
+jupyter-core==4.9.2
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.6
+jupyter-nbextensions-configurator==0.4.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.1.0
+jupyterthemes==0.20.0
+kaleido==0.2.1
+kiwisolver==1.4.0
+korean-lunar-calendar==0.2.1
+langcodes==3.3.0
+lesscpy==0.15.0
+lifelines==0.27.0
+locket==1.0.0
+lxml==4.8.0
+MarkupSafe==2.1.1
+matplotlib==3.5.1
 matplotlib-inline==0.1.3
-nest-asyncio==1.5.5
-numpy==1.22.4
+mistune==0.8.4
+msgpack==1.0.3
+murmurhash==1.0.7
+nbclient==0.5.13
+nbconvert==6.4.4
+nbformat==5.2.0
+nest-asyncio==1.5.4
+nltk==3.7
+notebook==6.4.10
+numpy==1.21.6
+openpyxl==3.0.9
+outcome==1.1.0
 packaging==21.3
-pandas==1.4.2
+pandas==1.4.1
+pandocfilters==1.5.0
 parso==0.8.3
+partd==1.2.0
+pathy==0.6.1
 patsy==0.5.2
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==9.1.1
-prompt-toolkit==3.0.29
-psutil==5.9.1
+Pillow==9.0.1
+plotly==5.8.0
+ply==3.11
+poyo==0.5.0
+preshed==3.0.6
+prometheus-client==0.13.1
+prompt-toolkit==3.0.28
+psutil==5.9.0
 ptyprocess==0.7.0
 pure-eval==0.2.2
-Pygments==2.12.0
-pyparsing==3.0.9
+pyaml==21.10.1
+pyarrow==7.0.0
+pycparser==2.21
+pydantic==1.8.2
+PyGithub==1.55
+Pygments==2.11.2
+PyJWT==2.3.0
+PyMeeus==0.5.11
+pymongo==4.1.1
+PyMySQL==1.0.2
+PyNaCl==1.5.0
+pyOpenSSL==22.0.0
+pyparsing==3.0.7
+pyrsistent==0.18.1
+PySocks==1.7.1
 python-dateutil==2.8.2
+python-slugify==6.1.1
 pytz==2022.1
-pyzmq==23.1.0
+PyWavelets==1.3.0
+PyYAML==6.0
+pyzmq==22.3.0
+regex==2022.4.24
+requests==2.27.1
+requirements-parser==0.5.0
+retrying==1.3.3
 scikit-learn==1.1.1
-scipy==1.8.1
+scipy==1.8.0
 seaborn==0.11.2
-six==1.16.0
-sklearn==0.0
+selenium==4.1.3
+Send2Trash==1.8.0
+six @ file:///AppleInternal/BuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-110/six-1.15.0-py2.py3-none-any.whl
+slicer==0.0.7
+smart-open==5.2.1
+sniffio==1.2.0
+sortedcontainers==2.4.0
+soupsieve==2.3.1
+spacy==3.3.0
+spacy-legacy==3.0.9
+spacy-loggers==1.0.2
+spotipy==2.19.0
+SQLAlchemy==1.4.35
+sqlparse==0.4.2
+srsly==2.4.3
 stack-data==0.2.0
+starlette==0.17.1
 statsmodels==0.13.2
+tblib==1.7.0
+tenacity==8.0.1
+terminado==0.13.3
+testpath==0.6.0
+text-unidecode==1.3
+texttable==1.6.4
+thinc==8.0.15
 threadpoolctl==3.1.0
+tifffile==2022.5.4
+tokenizer==3.4.1
+toolz==0.11.2
 tornado==6.1
-traitlets==5.2.2.post1
+tqdm==4.64.0
+traitlets==5.1.1
+trio==0.20.0
+trio-websocket==0.9.2
+typer==0.4.1
+types-setuptools==57.4.14
+typing_extensions==4.1.1
+Unidecode==1.3.4
+urllib3==1.26.9
+uvicorn==0.17.6
+vowpalwabbit==9.1.0
+wasabi==0.9.1
 wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.1.2
+widgetsnbextension==3.6.0
+wrapt==1.14.0
+wsproto==1.1.0
+xlrd==2.0.1
+zict==2.2.0
+zipp==3.7.0
